@@ -3,6 +3,7 @@ $Id$
 2015-07-15  Christian Franke  <franke@computer.org>
 
 	autogen.sh: Drop support for automake 1.7 - 1.9.x.
+	Rework search for automake-VERSION.
 	configure.ac: Drop support for autoconf 2.5x.
 	Drop support for automake 1.7 - 1.9.x.
 	Remove --with-docdir option.
